--- a/alm/curriculums/templates/coding_class/main_page.html
+++ b/alm/curriculums/templates/coding_class/main_page.html
@@ -6,21 +6,26 @@
 <body>
 
 <div class="front-page">
-    <h1> Project: IMAGE GALLERY</h1>
+    <h1> Project #1: IMAGE GALLERY</h1>
     <hr role="presentation">
     <h2> CURRENT HOMEWORK: </h2>
     <p>
-        We've looked at the <b><a href="https://jsfiddle.net/Lafve70u/">PARROT PICTURES</a></b> project on jsfiddle.net. Your goal is to:
-        <ul>
-    <li>
-        Notice the layout, and realize that there are three languages that make up the webpage: HTML, CSS, and JavaScript
-    </li>
+        We've looked at the <b><u><a href="https://jsfiddle.net/Lafve70u/">PARROT PICTURES</a></u></b> project on jsfiddle.net. Your goal is to:
+    </p>
     <ul>
     <li>
-        The languages speak to the web application, communication an algorithm: in this case, the problem is that we want
+        Notice the layout, and realize that there are three languages that make up the webpage: HTML, CSS, and JavaScript.
+    </li>
+    <li>
+        The languages speak to the web application, communicating an algorithm: in this case, the issue is that we want
         to display several large pictures. We want the user to be able to click on buttons to see the pictures, without
         changing the whole webpage.
     </li>
+        <li>
+            Our algorithm has these steps: we lay out the page, with a title, buttons to click to change the pictures, and the
+            pictures. Every time the user clicks a button, the Javascript event knows which button was clicked. We hide all the
+            pictures, and then only reveal the one tied to our clicked button.
+        </li>
     <li>
         We use <b>HTML</b> to lay out <b>the basic elements of the page</b>. Example: putting a button on a webpage, and putting a picture on a webpage.
     </li>
@@ -29,16 +34,16 @@
         </li>
         <li> We use <b>Javascript</b> to <b>add events to the webpage</b>. Example: changing the picture when someone clicks the button.
         </li>
-        </ul>
     <li>
-        Decide upon what you want your picture gallery to be about! Your chickadee sticker business? Cute kittens? Sloths? Minecraft characters?! YOU DECIDE!
+        You've decided already what your gallery is going to be about! Sloths, mushrooms, swords, jellyfish, wolves... you're all doing a great job showcasing your interests, mashaAllah.
     </li>
 </ul>
-    </p>
 
     <p>
-        Next time: Make sure to bring your laptop as well as your excitement! We will be making your own customized photo galleries.
+        Next time: Make sure to bring your laptop as well as your excitement! InshaAllah we will continue working on the photo galleries, adding more information and understanding.
     </p>
+
+    <p style="font-size:14pt;font-weight:bold;text-align:center;">Optional: <br>If you'd like, you can draw some pictures or take some photographs yourself -- <br> and we can upload those onto the server to use, rather than just finding images online!</p>
 </div>
 </body>
 
