--- a/alm/curriculums/templates/project_base.html
+++ b/alm/curriculums/templates/project_base.html
@@ -40,43 +40,19 @@
   </head>
   <body>
     {% block body %}
-<!--
-<span id="logo-container">
-  <img src="/static/website/images/websiteheader1.png" alt=""/>
-</span>
--->
-
-
-    <div id="top"><a href="#main-content" class="sr-only sr-only-focusable" style="color:white;font-weight:heavy;font-size:16pt">Skip to main content.</a></div>
-
-          {% include "menu.html" %}
-    <div class="row">
-      <div class="col">
-    <main id="main-content" class="container main-content mt-4"  style="min-width:90%" tabindex="-1">
-      <div class="row">
-        {% if sidebar %}
-        <div class="col-4">
-          {% block sidebar %}
-          {% endblock %}
-        </div>
-        {% endif %}
-        <div class="{% if sidebar %}col-8{% else %}col{% endif %}">
-          {% block content %}
-          {% endblock %}
+    <!-- for this base, we only have the logo in the corner that redirects us to the main website -->
+    <div class="row" style="width:100px;float:left;">
+    <a class="navbar-brand" href="/">
+      <div class="media">
+        <div class="media-body">
+          <img class="logo-responsive" style="width:50px;position:absolute;top:1px;left:1px;z-index:3;opacity:50%;" src="{% static 'images/alm_logo.jpg' %}"
+               alt="ALM School">
         </div>
       </div>
-    </main>
+    </a>
       </div>
-    </div>
-
-    <footer class="footer">
-    {% block footer %}
-        <div class="footer">
-          Alif Lam Mim
-        </div>
+{% block content %}
     {% endblock %}
-    </footer>
-
     {% endblock %}
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
