fix up framework for submitting projects

--- a/alm/curriculums/templates/main_dir/home_template.html
+++ b/alm/curriculums/templates/main_dir/home_template.html
@@ -10,6 +10,17 @@
     <p>
         This is currently just a framework in progress to support the homeschool coding class, and host their completed projects live online.
     </p>
+
+    {% for project in projects %}
+        <h2>{{project.name}}</h2>
+    <p>
+        {{project.description|safe}}
+    </p>
+    {% endfor %}
+
+        <h2><a href="{% url 'submit_work' %}">Click Here To Submit Work</a></h2>
+
+        <h2><a href="{% url 'submissions_list' %}">View Submitted Work</a></h2>
 </div>
 </body>
 </html>
